Reorganized results and data with symlinks

--- a/presentations/2017-04-03-bsm-network-call/2017-04-03-bsm-network-call.tex
+++ b/presentations/2017-04-03-bsm-network-call/2017-04-03-bsm-network-call.tex
@@ -50,14 +50,6 @@
 \begin{frame}{Variant calling}{Concepts, challenges, approaches}
 \begin{columns}[t]
 \begin{column}{0.5\textwidth}
-
-\includegraphics[width=1.0\columnwidth]{figures/from-others/kim-2013-bmcbioinf-fig1a.png}
-\medskip
-
-{\tiny BMC Bioinformatics. 2013;14:189}
-%\includegraphics[width=1.0\columnwidth]{figures/from-others/kim-2013-bmcbioinf-fig1b.png}
-\end{column}
-\begin{column}{0.5\textwidth}
 \begin{enumerate}
 \item data + caller\(_k\) \(\rightarrow\) VCF\(_k\)
 \item 
@@ -78,6 +70,14 @@
 \large
 probabilistic approaches
 }
+%\includegraphics[width=1.0\columnwidth]{figures/from-others/kim-2013-bmcbioinf-fig1b.png}
+\end{column}
+\begin{column}{0.5\textwidth}
+
+\includegraphics<2->[width=1.0\columnwidth]{figures/from-others/kim-2013-bmcbioinf-fig1a.png}
+\medskip
+
+%{\tiny \onslide<2->BMC Bioinformatics. 2013;14:189}
 %\includegraphics[width=1.0\columnwidth]{figures/from-others/kim-2013-bmcbioinf-fig1b.png}
 \end{column}
 \end{columns}
