--- a/notebook/2017-05-03-strelka-mutect2-pilot/2017-05-03-strelka-mutect2-pilot.Rmd
+++ b/notebook/2017-05-03-strelka-mutect2-pilot/2017-05-03-strelka-mutect2-pilot.Rmd
@@ -12,6 +12,15 @@ lattice.options(default.theme = "standard.theme")
 ## Scaling with segment length
 
 ```{r}
+rdepth <- lapply(tissues <- c("NeuN_pl", "NeuN_mn", "muscle"),
+                 function(x) {
+                     df <- read.delim(paste0("results/16MB/MSSM179_", x , "-16MB.bam.depth.1000"),
+                                      header = FALSE, col.names = c("ones", "pos", "depth"))[-1]
+                     df$tissue <- factor(x, levels = tissues, ordered = TRUE)
+                     return(df)
+                 })
+#names(rdepth) <- tissues
+rdepth <- do.call(rbind, rdepth)
 runt <- read.csv("results/runtimes.csv")
 ```
 
@@ -21,6 +30,10 @@ runt <- read.csv("results/runtimes.csv")
 1. length of genomic segment
 1. read depth
 
+```{r read-depth, echo=FALSE}
+xyplot(depth ~ (pos / 1e6)  | tissue, data = rdepth, type = "p", pch = ".", xlab = "position (MB)", grid = TRUE, layout = c(3, 1))
+```
+
 ```{r scaling-length, echo=FALSE}
 arg <- list(xlab = "length (bases)", ylab = "real time",
             labels = c("1s", "7.8s", "1m", "7.8m", "1h", "7.8h", "2.5d", "2.8w", "5m"),
@@ -29,7 +42,7 @@ xyplot(real.time ~ seglen | tissue.pair, data = runt, groups = caller, subset = 
 ```
 
 ```{r scaling-length-log, echo=FALSE}
-xyplot(log(real.time, base = 60) ~ log10(seglen) | tissue.pair, data = runt, groups = caller, subset = tissue.pair != "NeuN_mn-NeuN_pl", type = c("p", "r"), xlab = arg$xlab, ylab = arg$ylab, grid = TRUE, auto.key = list(text = c("mutect2", "strelka")), xlim = c(5.5, log10(3e9)), ylim = c(1, 3.5), scales = list(y = list(at = arg$at.lin, labels = arg$labels)))
+xyplot(log(real.time, base = 60) ~ log10(seglen) | tissue.pair, data = runt, groups = caller, subset = tissue.pair != "NeuN_mn-NeuN_pl", type = c("p", "r"), xlab = paste("lg", arg$xlab), ylab = paste(arg$ylab, " (log scale)"), grid = TRUE, auto.key = list(text = c("mutect2", "strelka")), xlim = c(5.5, log10(3e9)), ylim = c(1, 3.5), scales = list(y = list(at = arg$at.lin, labels = arg$labels)))
 ```
 
 ## Multithreading efficiency
